@@ -23,7 +23,7 @@
 		<!-- ~~~~~~ -->
 		<!-- System -->
 		<!-- ~~~~~~ -->
-		<jdk.version>1.7</jdk.version>
+		<jdk.version>1.8</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -140,7 +140,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-search-analyzers</artifactId>
-			<version>4.1.1.Final</version>
+			<version>4.1.1.Final</version><!--old 4.1.1.Final new -->
 		</dependency>
 
 		<!--TODO: Mirko's dependency uses hibernate 5??? -->
@@ -368,6 +368,11 @@
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
 			<version>1.6.12</version>
@@ -377,7 +382,7 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.6.12</version>
 		</dependency>
-        <dependency>
+		<dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${spring.version}</version>
@@ -519,25 +524,32 @@
 			<artifactId>jersey-core</artifactId>
 			<version>1.18.1</version>
 		</dependency>
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-json</artifactId>
-            <version>1.8</version>
-        </dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-json</artifactId>
+			<version>1.8</version>
+		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-bundle</artifactId>
 			<version>1.19</version>
 		</dependency>
 
+		<!-- webdav client -->
+		<dependency>
+			<groupId>com.github.lookfirst</groupId>
+			<artifactId>sardine</artifactId>
+			<version>5.9</version>
+		</dependency>
+
 		<!-- ~~~~~ -->
 		<!-- OAuth -->
 		<!-- ~~~~~ -->
-        <dependency>
-            <groupId>org.scribe</groupId>
-            <artifactId>scribe-up</artifactId>
-            <version>1.3.1</version>
-        </dependency>
+		<dependency>
+			<groupId>org.scribe</groupId>
+			<artifactId>scribe-up</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 
 		<!-- ~~~ -->
 		<!-- WEB -->
@@ -566,16 +578,23 @@
             <version>1.2.4</version>
         </dependency>
 
-        <!-- ~~~~~~~~~~~~~~~~~~~ -->
-        <!-- DATA TRANSFORMATION -->
-        <!-- ~~~~~~~~~~~~~~~~~~~ -->
+		<!-- ~~~~~~~~~~~~~~~~~~~ -->
+		<!-- DATA TRANSFORMATION -->
+		<!-- ~~~~~~~~~~~~~~~~~~~ -->
 
-        <!-- CSV -->
-        <dependency>
-            <groupId>net.sf.supercsv</groupId>
-            <artifactId>super-csv</artifactId>
-            <version>2.3.1</version>
-        </dependency>
+		<!-- CSV -->
+		<dependency>
+			<groupId>net.sf.supercsv</groupId>
+			<artifactId>super-csv</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.univocity/univocity-parsers -->
+		<dependency>
+			<groupId>com.univocity</groupId>
+			<artifactId>univocity-parsers</artifactId>
+			<version>2.1.1</version>
+		</dependency>
 
 		<!-- ~~~~~ -->
 		<!-- DICOM -->
@@ -597,10 +616,10 @@
 		</dependency>
 		
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-exec</artifactId>
-            <version>1.1</version>
-        </dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-exec</artifactId>
+			<version>1.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.vecmath</groupId>
@@ -608,15 +627,89 @@
 			<version>1.5.2</version>
 		</dependency>
 
+		<!-- Testing -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.23.4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4-rule</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-classloading-objenesis</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-assert</artifactId>
+			<version>1.4</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>2.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.xmlunit</groupId>
+			<artifactId>xmlunit-core</artifactId>
+			<version>2.6.4</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.xmlunit</groupId>
+			<artifactId>xmlunit-matchers</artifactId>
+			<version>2.6.4</version>
+			<scope>test</scope>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>2.1</version>
+			<scope>test</scope>
+		</dependency>
+
 		<!--TODO: Mirko's dependency-->
 		<!--<dependency>-->
-            <!--<groupId>org.jboss.logging</groupId>-->
-            <!--<artifactId>jboss-logging-annotations</artifactId>-->
-            <!--<version>2.1.0.Final</version>-->
-            <!--&lt;!&ndash;3.3.2 Only required during compile of the current module &ndash;&gt;-->
-            <!--<scope>provided</scope>-->
-            <!--<optional>true</optional>-->
-        <!--</dependency>-->
+		<!--<groupId>org.jboss.logging</groupId>-->
+		<!--<artifactId>jboss-logging-annotations</artifactId>-->
+		<!--<version>2.1.0.Final</version>-->
+		<!--&lt;!&ndash;3.3.2 Only required during compile of the current module &ndash;&gt;-->
+		<!--<scope>provided</scope>-->
+		<!--<optional>true</optional>-->
+		<!--</dependency>-->
 
 		<!--TODO: Mirko's dependency-->
 		<!--<dependency>-->
@@ -639,6 +732,11 @@
 			<name>dcm4che Repository</name>
             <url>https://www.dcm4che.org/maven2</url>
 		</repository>
+       
+	   <!-- <repository>
+            <id>spring-release</id>
+            <url>https://repo.springsource.org/libs-release/</url>
+        </repository> -->
 		
 		<repository> 
 			<id>repository.spring.release</id> 
@@ -672,7 +770,7 @@
 					</configuration>
 				</plugin>
 				-->
-			
+
 				<plugin>
 					<!-- http://maven.apache.org/plugins/maven-idea-plugin/ -->
 					<groupId>org.apache.maven.plugins</groupId>
@@ -707,6 +805,15 @@
 					<artifactId>maven-clean-plugin</artifactId>
 					<version>2.4.1</version>
 				</plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M1</version>
+                    <configuration>
+                        <forkCount>1</forkCount>
+						<argLine>-Xmx1024m -XX:MaxPermSize=256m -Dlog4j.defaultInitOverride=true</argLine>
+                    </configuration>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
